--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "axios": "^1.6.7",
+    "date-fns": "^3.3.1",
     "react": "18.2.0",
     "react-native": "0.72.2",
     "react-native-gesture-handler": "^2.14.1",
     "react-native-reanimated": "^3.6.2",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
+    "react-native-vector-icons": "^10.0.3",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
