--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "date-fns": "^3.3.1",
     "react": "18.2.0",
     "react-native": "0.72.2",
+    "react-native-calendars": "^1.1303.0",
     "react-native-gesture-handler": "^2.14.1",
     "react-native-reanimated": "^3.6.2",
     "react-native-safe-area-context": "^4.8.2",
